Bug 431547 - Text tool's tooltip includes incorrect Ctrl+T shortcut
Summary: Text tool's tooltip includes incorrect Ctrl+T shortcut
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: 4.4.2-beta2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-13 15:10 UTC by Tyson Tan
Modified: 2021-01-13 15:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2021-01-13 15:10:19 UTC
The Text tool icon in toolbox has a tooltip:

"SVG Text Tool (Ctrl+T)"

However, Ctrl+T is actually Transform Tool. Maybe we forgot to clean up something when we switched the default shortcut?
Comment 1 Halla Rempt 2021-01-13 15:16:39 UTC
Git commit b67c561f1479961029398169532b4c197f42d19c by Halla Rempt, on behalf of Simon Repp.
Committed on 13/01/2021 at 15:16.
Pushed by rempt into branch 'krita/4.3'.

Remove hardcoded text tool shortcut

(cherry picked from commit 464d8142a28cdc1b6b64b8f9d67c9112ae88aee6)

M  +0    -1    plugins/tools/svgtexttool/SvgTextToolFactory.cpp

https://invent.kde.org/graphics/krita/commit/b67c561f1479961029398169532b4c197f42d19c
Comment 2 Halla Rempt 2021-01-13 15:23:07 UTC
Git commit d0e4e72fb238a70dff6ac1170ffda4ffa06bbaf6 by Halla Rempt, on behalf of Simon Repp.
Committed on 13/01/2021 at 15:22.
Pushed by rempt into branch 'krita/4.4.2'.

Remove hardcoded text tool shortcut

(cherry picked from commit 464d8142a28cdc1b6b64b8f9d67c9112ae88aee6)
(cherry picked from commit b67c561f1479961029398169532b4c197f42d19c)

M  +0    -1    plugins/tools/svgtexttool/SvgTextToolFactory.cpp

https://invent.kde.org/graphics/krita/commit/d0e4e72fb238a70dff6ac1170ffda4ffa06bbaf6