Remove hardcoded text tool shortcut

BUG:431547

(cherry picked from commit 464d8142a28cdc1b6b64b8f9d67c9112ae88aee6)