plugins/tools/svgtexttool/SvgTextToolFactory.cpp
@@ -34,7 +34,6 @@ SvgTextToolFactory::SvgTextToolFactory()
     setSection(mainToolType());
     setPriority(1);
     setActivationShapeId(QString("flake/always,%1").arg(KoSvgTextShape_SHAPEID));
-    setShortcut(QKeySequence("CTRL+T"));
 }
 
 SvgTextToolFactory::~SvgTextToolFactory()
